--- a/css/homepage01.css
+++ b/css/homepage01.css
@@ -149,8 +149,8 @@ h1 {
 }
 
 .cat-background {
-  background-color: #c7c9c7 !important; }
-
+  background: linear-gradient(rgba(220, 220, 220, 0.6), rgba(214, 214, 214, 0.6)), linear-gradient(rgba(206, 206, 206, 0.3), rgba(208, 208, 208, 0.3)), url(../assets/cat-bc.png) no-repeat;
+}
 .cat-section-lg {
   transform: rotate(-360deg);
   opacity: 0.69;
@@ -566,4 +566,13 @@ h1 {
 .the-three-dives > .main-area{
   max-width: 1319px;
   margin: 0 auto;
+}
+/*   Subscribing Area   */
+.subscribing-area {
+  background: #F7F7F7;
+  padding-top: 9rem;
+  padding-bottom: 6rem;
+}
+.second-subscribe {
+  padding: 92px 0 66px 0;
 }
