--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
 #hero {
-  background: url("/assets/bg.jpg") no-repeat;
-  background-size: cover;
-  background-position: 0 40%;
-  background-image: linear-gradient(rgba(84, 88, 90, 0.6), rgba(84, 88, 90, 0.6)), linear-gradient(223deg, rgba(255, 255, 255, 0.5), rgba(84, 88, 90, 0.5)), url("/assets/cutegirl.jpg");
-  background-repeat: no-repeat;
-  background-size: cover; }
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), linear-gradient(223deg, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/doctor-w-dog.jpg) no-repeat;
+  background-size: 100%; }
+
+.headerlogo .top-logo {
+  margin-left: -17px; }
 
 .hero-row-1 {
   display: flex;
@@ -13,7 +12,7 @@
 
 @font-face {
   font-family: AvenirNext;
-  src: url("/fonts/AvenirNextLTPro-Regular.otf"); }
+  src: url("../fonts/AvenirNextLTPro-Regular.otf"); }
 
 .headerlogo {
   padding-top: 47px;
@@ -38,8 +37,7 @@ h1 {
 
 .play-logo {
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  flex-direction: row-reverse;
   opacity: 0.9;
   mix-blend-mode: color-dodge;
   font-family: AvenirNext;
@@ -49,9 +47,14 @@ h1 {
   font-stretch: normal;
   line-height: 2;
   letter-spacing: 0.1px;
-  text-align: left;
-  color: #fc0606; }
-
+  color: #fc0606;
+  align-items: flex-end;
+  justify-content: flex-start;
+  padding-left: 23px;
+}
+.play-logo p{
+  padding-right: 24px
+}
 .secondnav1 {
   opacity: 0.9;
   font-family: AvenirNext;
@@ -118,28 +121,36 @@ h1 {
   line-height: 1.5;
   letter-spacing: -0.5px;
   opacity: 0.6;
-  color: #9d9d9d; }
+  color: #ffffff;
+}
 
 .col1 {
   background-blend-mode: normal, multiply;
-  background-image: linear-gradient(rgba(166, 25, 46, 0.7), rgba(166, 25, 46, 0.7)), linear-gradient(to bottom, #f5515f, #9f041b), url("/assets/girldoctor.jpg");
-  background-size: 100% 100%; }
+  background-image: linear-gradient(rgba(166, 25, 46, 0.7), rgba(166, 25, 46, 0.7)), linear-gradient(to bottom, #f5515f, #9f041b), url("../assets/staring-dof.jpg");
+  background-repeat: no-repeat;
+  background-size: cover; }
 
 .col3 {
   background-blend-mode: normal, multiply;
-  background-image: linear-gradient(rgba(84, 88, 90, 0.6), rgba(84, 88, 90, 0.6)), linear-gradient(rgba(90, 103, 117, 0.3), rgba(90, 103, 117, 0.3)), url("/assets/girldoctor.jpg");
-  background-size: cover; }
+  background-size: cover;
+  background: linear-gradient(rgba(43, 48, 50, 0.6), rgba(43, 51, 54, 0.6)), linear-gradient(rgba(48, 55, 62, 0.3), rgba(90, 103, 117, 0.3)), url(../assets/cuddling.jpg) no-repeat;
+  background-size: 100% 100%;
+}
 
 .col2 {
-  background-color: #fc0606; }
+  background-color: #fc0606;
+}
 
 .col4 {
   mix-blend-mode: multiply;
   background-blend-mode: normal, color, multiply;
-  background-image: linear-gradient(rgba(90, 103, 117, 0.6), rgba(90, 103, 117, 0.6)), linear-gradient(#5a6775, #5a6775), linear-gradient(#9d9d9d, #9d9d9d), url("/assets/hands.jpg"); }
+  background: linear-gradient(rgba(255, 0, 0, 0.6), rgba(255, 0, 0, 0.6)), linear-gradient(#383c41, #5a6775), linear-gradient(#a49f9f, #9d9d9d), url(../assets/Knee-Joint.jpg) no-repeat;
+  background-size: 100%;
+}
 
 .cat-background {
-  background-color: #c7c9c7 !important; }
+  background: linear-gradient(rgba(220, 220, 220, 0.6), rgba(214, 214, 214, 0.6)), linear-gradient(rgba(206, 206, 206, 0.3), rgba(208, 208, 208, 0.3)), url(../assets/cat-bc.png) no-repeat;
+}
 
 .cat-section-lg {
   transform: rotate(-360deg);
@@ -264,6 +275,10 @@ h1 {
   text-align: left;
   color: #c7c9c7; }
 
+.footer {
+  background-color: rgba(155, 155, 155, 0.06);
+  height: 100%; }
+
 .footer-menu-last p {
   font-family: AvenirNext;
   font-size: 11px;
@@ -274,10 +289,6 @@ h1 {
   letter-spacing: 0.3px;
   text-align: left;
   color: #8e8e93; }
-
-.footer {
-  background-color: rgba(155, 155, 155, 0.06);
-  height: 100%; }
 
 .redcolor {
   color: #fc0606; }
@@ -386,6 +397,11 @@ h1 {
   text-align: left;
   color: #c7c9c7; }
 
+.slider-cap-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
+
 .slider2 {
   opacity: 0.59;
   background-blend-mode: multiply, multiply, multiply;
@@ -402,14 +418,12 @@ h1 {
   text-align: left;
   color: #fc0606; }
 
-.bg-color {
-  background-color: rgba(155, 155, 155, 0.06); }
-
 .slider3 {
   opacity: 0.59;
   background-blend-mode: multiply, multiply, multiply;
-  background-image: linear-gradient(#c7c9c7, #c7c9c7), linear-gradient(to bottom, transparent, #919ba1), linear-gradient(rgba(157, 157, 157, 0.3), rgba(157, 157, 157, 0.3)), url("/assets/images.jpg");
-  background-size: 100% 100%; }
+  background-image: linear-gradient(#c7c9c7, #c7c9c7), linear-gradient(to bottom, transparent, #919ba1), linear-gradient(rgba(157, 157, 157, 0.3), rgba(157, 157, 157, 0.3)), url("../assets/dog-paatient.jpg");
+;
+  background-size: cover; }
 
 .carousel-indicators li {
   max-width: 10px;
@@ -523,4 +537,50 @@ h1 {
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
-  height: 64px; }
+  height: 64px;
+}
+.arrow-img{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 3px solid red;
+  align-self: flex-end;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.arrow-img img{
+  width: 30px;
+  height: 41px;
+  padding-left: 6px;
+}
+.signatureimg img{
+  width: 400px;
+}
+.main-images{
+  width: 186px;
+  height: 187px;
+}
+.main-images::after {
+  display: block;
+  position: relative;
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0, #fff 100%);
+  margin-top: -150px;
+  height: 150px;
+  width: 100%;
+  content: '';
+}
+.main-area{
+  max-width: 1319px;
+  margin: 0 auto;
+}
+
+/*   Subscribing Area   */
+.subscribing-area {
+  background: #F7F7F7;
+  padding-top: 9rem;
+  padding-bottom: 6rem;
+}
+.second-subscribe {
+  padding: 92px 0 66px 0;
+}
