--- a/css/publicationarchivepage.css
+++ b/css/publicationarchivepage.css
@@ -1,7 +1,8 @@
 #hero {
     background-blend-mode: normal, multiply;
-    background: linear-gradient(rgba(166, 25, 46, 0.6), rgba(166, 25, 46, 0.6)), linear-gradient(to bottom, #f5515f, #9f041b), url("../assets/redcat.jpg") no-repeat;
-    background-size: 100%; }
+    background:linear-gradient(rgba(4, 4, 4, 0.6), rgba(0, 0, 0, 0.6)), linear-gradient(221deg, rgb(255, 255, 255), rgb(19, 19, 19)), url(../assets/catinthehands.jpeg)no-repeat;
+    background-size: cover; 
+}
   
   .hero-row-1 {
     display: flex;
@@ -116,9 +117,9 @@
     background-color: #fc0606;
     height: 61px; }
   .the-three-dives{
-    background: -moz-linear-gradient(left, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%);
-    background: -webkit-linear-gradient(left, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%);
-    background: linear-gradient(to right, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%);
+        background: -moz-linear-gradient(left, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%);
+        background: -webkit-linear-gradient(left, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%); 
+        background: linear-gradient(to right, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%);
   }
   .the-three-dives > .main-area{
     max-width: 1319px;
@@ -162,6 +163,18 @@
     text-align: left;
     color: #ffffff;
   }
+  .the-three-dives .two-div-1 {
+    font-family: AvenirNext;
+    font-size: 28px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: -0.5px;
+    text-align: left;
+    color: #ffffff;
+  }
+  
   .two-div1{
     padding: 56px 78px 153px 67px;
   }
@@ -200,9 +213,10 @@
   
   .the-three-dives .col1 p:first-child {
     color: #ffffff; }
-  
-  .the-three-dives .col1 p:nth-last-child(3) {
+
+  .the-three-dives .col1 p:nth-last-child(2) {
     color: #ffffff; }
+    
   
   .the-three-dives .col3 {
     background-blend-mode: normal, multiply;
@@ -212,10 +226,11 @@
   .the-three-dives .col2 {
     background-color: #fc0606; }
   
-  .the-three-dives .col4 {
-    background-blend-mode: normal, multiply, soft-light, multiply;
+.the-three-dives .col4 {
+    background-blend-mode: normal, soft-light, multiply;
     background:linear-gradient(to bottom, #353535, rgba(32, 33, 33, 0.05)), linear-gradient(#54585a, rgb(0, 0, 0)), linear-gradient(#54585a, rgba(84, 88, 90, 0.21)), url(../assets/emergingtrendsgerms.jpg) no-repeat;
-    background-size: 100%; }
+    background-size: 100%; 
+}
   
   .cat-background {
     background-color: #c7c9c7 !important; }
@@ -788,7 +803,7 @@
     font-family: AvenirNext; }
   
   .three-slider {
-    height: 300px;
+    height: 330px;
     background-color: #54585a;
     margin-bottom: 250px; }
   
@@ -1198,7 +1213,7 @@
     display: flex;
     flex-direction: row;
     padding-top: 40px;
-    margin-top: 200px !important; }
+   }
   .subscribing-area{
     background: #F7F7F7;
     padding-top: 9rem;
@@ -1730,5 +1745,181 @@
     color: #fc0606; }
   
   .header-text p > span {
+    color: #9d9d9d; }
+  /* top resources */
+  
+  .top-resource .header-text p {
+    width: 538px;
+    height: 38px;
+    font-family: AvenirNext;
+    font-size: 28px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #fc0606; }
+  
+  .top-resource .header-text p > span {
     color: #54585a; }
   
+  .top-resource .label {
+    display: flex;
+    flex-direction: row; }
+  
+  .top-resource .label-1 {
+    width: 130px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center; }
+  
+  .top-resource .label-1 p {
+    font-family: AvenirNext;
+    font-size: 18px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #54585a; }
+  
+  .top-resource .label-2 p {
+    opacity: 0.6;
+    font-family: AvenirNext;
+    font-size: 14.4px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 0.92;
+    letter-spacing: normal;
+    text-align: left;
+    color: #ffffff; }
+  
+  .top-resource .label-2 {
+    width: 100px;
+    opacity: 0.6;
+    background-color: #54585a;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center; }
+  
+  .top-resource .column-1 {
+    width: 200px; }
+  
+  .top-resource .column {
+    display: flex;
+    flex-direction: row; }
+  
+  .top-resource .column-1 p {
+    width: 200px;
+    font-family: AvenirNext;
+    font-size: 18px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #5e6a6e; }
+  
+  .top-resource .column-1 p span {
+    font-family: AvenirNext;
+    font-size: 17px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1;
+    letter-spacing: normal;
+    text-align: left;
+    color: #fc0606; 
+  }
+  .top-resource .column-2 {
+    width: 230px;
+  }
+  .top-resource .column-2 p {
+    font-family: AvenirNext;
+    font-size: 16px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.75;
+    letter-spacing: -0.1px;
+    text-align: left;
+    color: #939393; 
+    width: 250px;
+  }
+  
+  .top-resource .column-3{
+    width:140px;
+    display:flex;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+  .top-resource .column-3 p {
+    font-family: AvenirNext;
+    font-size: 16px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.75;
+    letter-spacing: -0.1px;
+    text-align: left;
+    color: #939393; 
+  
+  }
+  
+  .top-resource .digit-slider-icons p {
+    opacity: 0.6;
+    font-family: AvenirNext;
+    font-size: 14px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: normal;
+    text-align: center;
+    color: #c7c9c7;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;  
+  }
+  
+  .top-resource .digit-slider-icons .p-one {
+    width: 44px;
+    height: 44px;
+    opacity: 0.6;
+    border-radius: 22px;
+    background-color: #c7c9c7;
+    opacity: 0.6;
+    font-family: AvenirNext;
+    font-size: 14px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: normal;
+    text-align: center;
+    color: #ffffff; }
+  
+  .top-resource .digit-slider-icons .p-two {
+    width: 44px;
+    height: 44px;
+    opacity: 0.6;
+    border-radius: 22px;
+    color: #c7c9c7;
+    opacity: 0.6;
+    font-family: AvenirNext;
+    font-size: 14px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: normal;
+    text-align: center; }
+  /* top resources */
