--- a/css/resroucearchivepage.css
+++ b/css/resroucearchivepage.css
@@ -1,6 +1,6 @@
 #hero {
     background-blend-mode: normal, multiply;
-    background:linear-gradient(rgba(4, 4, 4, 0.6), rgba(0, 0, 0, 0.6)), linear-gradient(221deg, rgb(255, 255, 255), rgb(19, 19, 19)), url(../assets/onthebackofagirl.jpg)no-repeat;
+    background:linear-gradient(rgba(4, 4, 4, 0.6), rgba(0, 0, 0, 0.6)), linear-gradient(221deg, rgb(255, 255, 255), rgb(19, 19, 19)), url(../assets/lovecat.jpg)no-repeat;
     background-size: cover; 
 }
   
