--- a/css/academiclandingpage01.css
+++ b/css/academiclandingpage01.css
@@ -14,12 +14,14 @@
   src: url("../fonts/AvenirNextLTPro-Regular.otf"); }
 
 .headerlogo {
+  padding-left: 0px;
   padding-top: 37px;
   display: flex;
   justify-content: flex-start;
   flex-direction: row; }
 
 .headerlogo1 {
+  
   padding-top: 47px;
   display: flex;
   justify-content: flex-end;
@@ -79,6 +81,36 @@ h1 {
   letter-spacing: 0.1px;
   text-align: left;
   color: #9d9d9d; }
+   
+  .secondnav1 a{
+    opacity: 0.9;
+    font-family: AvenirNext;
+    font-size: 18px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 2;
+    letter-spacing: 0.1px;
+    text-align: left;
+    color: #9d9d9d; }
+
+.secondnav1 a:visited,
+.secondnav1 a:hover,
+.secondnav1 a:active,
+.secondnav1 a:focus{
+    opacity: 0.9;
+    font-family: AvenirNext;
+    font-size: 18px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 2;
+    letter-spacing: 0.1px;
+    text-align: left;
+    color: #9d9d9d;
+    text-decoration: none; 
+  }
+
 
 .secondnav12 {
   mix-blend-mode: screen;
@@ -112,6 +144,19 @@ h1 {
   letter-spacing: 0.1px;
   text-align: left;
   color: #ffffff; }
+  .secondnav a{
+    opacity: 0.9;
+      font-family: AvenirNext;
+      font-size: 18px;
+      font-weight: 600;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: 2;
+      letter-spacing: 0.1px;
+    color: #f7f7f7!important;
+    text-decoration: none!important;
+  }
+  
 
 .bgcolor {
   background-color: #fc0606;
@@ -200,6 +245,38 @@ h1 {
   text-align: left;
   color: #f26b7f; }
 
+  .the-three-dives .col1 p a{
+    font-family: AvenirNext;
+    font-size: 28px;
+    font-weight: bold;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: -0.5px;
+    text-align: left;
+    color: #f26b7f; 
+    text-decoration: none!important;
+  }
+.the-three-dives .col1 p a:hover,
+.the-three-dives .col1 p a:visited,
+.the-three-dives .col1 p a:focus,
+.the-three-dives .col1 p a:active,
+  {
+      font-family: AvenirNext;
+      font-size: 28px;
+      font-weight: bold;
+      font-style: normal;
+      font-stretch: normal;
+      line-height: 1.5;
+      letter-spacing: -0.5px;
+      text-align: left;
+      color: #f26b7f; 
+      text-decoration: none!important;
+    }
+  
+ 
+
+  
 .the-three-dives .col1 p:first-child {
   color: #ffffff; }
 
@@ -1561,6 +1638,7 @@ h1 {
   color: #ffffff !important; }
 
 .logo {
+  padding-top:55px;
   opacity: 0.6;
   font-family: AvenirNext;
   font-size: 45px;
