--- a/css/acadlandingpage.css
+++ b/css/acadlandingpage.css
@@ -120,7 +120,7 @@ h1 {
   background: -webkit-linear-gradient(left, #a6192e 0%,#a6192e 42%,#9c101b 45%,#9c101b 45%,#9c101b 100%);
   background: linear-gradient(to right, #a6192e 0%,#a6192e 42%,#9c101b 45%,#9c101b 45%,#9c101b 100%);
 }
-.the-three-dives > .main-area{
+.main-area{
   max-width: 1319px;
   margin: 0 auto;
 }
@@ -1731,3 +1731,8 @@ h1 {
 
 .header-text p > span {
   color: #54585a; }
+.computer-area{
+  border-bottom: solid 1px #9a9a9a;
+  width: 364px;
+  text-align: center;
+}
