--- a/css/homepage01.css
+++ b/css/homepage01.css
@@ -570,7 +570,7 @@ h1 {
   background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* IE10+ */
   background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%); /* W3C */
 }
-.the-three-dives > .main-area{
+.main-area{
   max-width: 1319px;
   margin: 0 auto;
 }
@@ -603,4 +603,7 @@ h1 {
 .extea{
   text-align: -webkit-right;
   overflow: hidden;
+}
+.the-three-dives{
+  background: #fc0606;
 }
