--- a/css/publicationarchivepage.css
+++ b/css/publicationarchivepage.css
@@ -244,9 +244,7 @@
     background-color: #fc0606;
     height: 61px; }
   .the-three-dives{
-        background: -moz-linear-gradient(left, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%);
-        background: -webkit-linear-gradient(left, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%); 
-        background: linear-gradient(to right, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%);
+        background: #54585a;
   }
   .main-area{
     max-width: 1319px;
@@ -2227,3 +2225,8 @@
     letter-spacing: normal;
     text-align: center; }
   /* top resources */
+.computer-area{
+  border-bottom: solid 1px #9a9a9a;
+  width: 364px;
+  text-align: center;
+}
