--- a/css/resroucearchivepage.css
+++ b/css/resroucearchivepage.css
@@ -245,9 +245,7 @@
     background-color: #fc0606;
     height: 61px; }
   .the-three-dives{
-        background: -moz-linear-gradient(left, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%);
-        background: -webkit-linear-gradient(left, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%); 
-        background: linear-gradient(to right, #a6192e 0%,rgb(166, 25, 46) 42%,#9c101b 45%,#040303 45%,rgb(66, 66, 66) 100%);
+        background: #54585a;
   }
   .main-area{
     max-width: 1319px;
@@ -346,13 +344,6 @@
 
   .the-three-dives .col1 p:nth-last-child(2) {
     color: #ffffff; }
-    
-  
-  .the-three-dives .col3 {
-    background-blend-mode: normal, multiply;
-    background-image: linear-gradient(rgba(84, 88, 90, 0.6), rgba(84, 88, 90, 0.6)), linear-gradient(rgba(90, 103, 117, 0.3), rgba(90, 103, 117, 0.3)), url("../assets/col3.jpg");
-    background-size: 100% 100%; }
-  
   .the-three-dives .col2 {
     background-color: #fc0606; }
   
@@ -1642,11 +1633,7 @@
     text-align: left;
     color: #c7c9c7; }
   
-  .slider2 {
-    opacity: 0.59;
-    background-blend-mode: multiply, multiply, multiply;
-    background-image: linear-gradient(#c7c9c7, #c7c9c7), linear-gradient(to bottom, transparent, #919ba1), linear-gradient(rgba(157, 157, 157, 0.3), rgba(157, 157, 157, 0.3)), url("/assets/images1.jpg"); }
-  
+
   .dog-slider {
     font-family: AvenirNext;
     font-size: 36px;
@@ -1657,13 +1644,7 @@
     letter-spacing: -0.6px;
     text-align: left;
     color: #fc0606; }
-  
-  .slider3 {
-    opacity: 0.59;
-    background-blend-mode: multiply, multiply, multiply;
-    background-image: linear-gradient(#c7c9c7, #c7c9c7), linear-gradient(to bottom, transparent, #919ba1), linear-gradient(rgba(157, 157, 157, 0.3), rgba(157, 157, 157, 0.3)), url("/assets/images1.jpg");
-    background-size: 100% 100%; }
-  
+
   .carousel-indicators li {
     max-width: 10px;
     height: 10px;
@@ -2228,3 +2209,8 @@
     letter-spacing: normal;
     text-align: center; }
   /* top resources */
+.computer-area{
+  border-bottom: solid 1px #9a9a9a;
+  width: 364px;
+  text-align: center;
+}
