--- a/css/academylandingcombine.css
+++ b/css/academylandingcombine.css
@@ -1200,11 +1200,7 @@
     flex-direction: row;
     padding-top: 40px;
    }
-  .subscribing-area{
-    background: #F7F7F7;
-    padding-top: 9rem;
-    padding-bottom: 3rem;
-  }
+ 
   .Hands-on .rowone {
     display: flex;
     flex-direction: row;
@@ -1480,6 +1476,70 @@
     line-height: 1.5;
     letter-spacing: normal;
     text-align: center; }
+    /* subscribe */
+.Subscribe {
+  font-family: AvenirNext;
+  font-size: 34px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.21;
+  letter-spacing: -0.4px;
+  text-align: left;
+  color: #5a6775;
+  padding-top: 54px;
+  padding-left: 44px;
+}
+.bg-color {
+  background-color: rgba(155, 155, 155, 0.06);
+  width: 1200px;
+}
+.Subscribe1 {
+  font-family: AvenirNext;
+  font-size: 13px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.38;
+  letter-spacing: normal;
+  text-align: left;
+  color: #5a6775; }
+.subscribing-area {
+  background: #F7F7F7;
+  padding-top: 9rem;
+  padding-bottom: 6rem;
+}
+.second-subscribe {
+  padding: 107px 0 66px 0;
+}
+.computer-area{
+  border-bottom: solid 1px #9a9a9a;
+  width: 364px;
+  text-align: center;
+}
+.whatsnew{
+  font-size: 34px;
+}
+.main-area-carosel {
+  max-width: 1349px;
+  margin: 0 auto;
+}
+.main-area-carosel > div{
+  max-width: 1240px;
+}
+.extea{
+  display: flex;
+  justify-content: flex-end;
+}
+.the-three-dives{
+  background-color: #fc0606;
+}
+.main-area {
+  max-width: 1319px;
+  margin: 0 auto;
+}
+
+/* subsribe */
   
   .p-three {
     display: flex;
@@ -1572,32 +1632,8 @@
     letter-spacing: 45px;
     color: #ffffff; }
   
-  .Subscribe {
-    font-family: AvenirNext;
-    font-size: 34px;
-    font-weight: 500;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.21;
-    letter-spacing: -0.4px;
-    text-align: left;
-    color: #5a6775;
-    padding-left: 44px;
-  }
-  .second-subscribe{
-    padding: 92px 0 66px 0;
-  }
-  .Subscribe1 {
-    font-family: AvenirNext;
-    font-size: 13px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.38;
-    letter-spacing: normal;
-    text-align: left;
-    color: #5a6775; }
   
+ 
   .indicators {
     bottom: -70px !important;
     background-color: #9d9d9d !important;
