--- a/css/storieslandingpage.css
+++ b/css/storieslandingpage.css
@@ -175,6 +175,12 @@
   text-decoration: none!important;
 }
 
+.computer-area {
+  border-bottom: solid 1px #9a9a9a;
+  width: 364px;
+  text-align: center;
+}
+
 
   
   .bgcolor {
@@ -190,6 +196,7 @@
     max-width: 1319px;
     margin: 0 auto;
   }
+
   
   .the-three-dives .aligninng {
     display: flex;
@@ -1528,11 +1535,8 @@ padding-left: 2px;
     flex-direction: row;
     padding-top: 40px;
    }
-  .subscribing-area{
-    background: #F7F7F7;
-    padding-top: 9rem;
-    padding-bottom: 3rem;
-  }
+  
+ 
   .Hands-on .rowone {
     display: flex;
     flex-direction: row;
@@ -1566,6 +1570,68 @@ padding-left: 2px;
   
   .Hands-on .margining {
     margin-top: 8.3% !important; }
+/* subscribe */
+.Subscribe {
+  font-family: AvenirNext;
+  font-size: 34px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.21;
+  letter-spacing: -0.4px;
+  text-align: left;
+  color: #5a6775;
+  padding-top: 54px;
+  padding-left: 44px;
+}
+.bg-color {
+  background-color: rgba(155, 155, 155, 0.06);
+  width: 1200px;
+}
+.Subscribe1 {
+  font-family: AvenirNext;
+  font-size: 13px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.38;
+  letter-spacing: normal;
+  text-align: left;
+  color: #5a6775; }
+.subscribing-area {
+  background: #F7F7F7;
+  padding-top: 9rem;
+  padding-bottom: 6rem;
+}
+.second-subscribe {
+  padding: 107px 0 66px 0;
+}
+.computer-area{
+  border-bottom: solid 1px #9a9a9a;
+  width: 364px;
+  text-align: center;
+}
+.whatsnew{
+  font-size: 34px;
+}
+.main-area-carosel {
+  max-width: 1349px;
+  margin: 0 auto;
+}
+.main-area-carosel > div{
+  max-width: 1240px;
+}
+.extea{
+  display: flex;
+  justify-content: flex-end;
+}
+.the-three-dives{
+  background-color: #fc0606;
+}
+.main-area {
+  max-width: 1319px;
+  margin: 0 auto;
+}
   
   .slider1 {
     background-color: #f7f7f7; }
@@ -1936,31 +2002,8 @@ padding-left: 2px;
     letter-spacing: 45px;
     color: #ffffff; }
   
-  .Subscribe {
-    font-family: AvenirNext;
-    font-size: 34px;
-    font-weight: 500;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.21;
-    letter-spacing: -0.4px;
-    text-align: left;
-    color: #5a6775;
-    padding-left: 44px;
-  }
-  .second-subscribe{
-    padding: 92px 0 66px 0;
-  }
-  .Subscribe1 {
-    font-family: AvenirNext;
-    font-size: 13px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.38;
-    letter-spacing: normal;
-    text-align: left;
-    color: #5a6775; }
+ 
+  
   
   .indicators {
     bottom: -70px !important;
