--- a/css/storiesarchivepage.css
+++ b/css/storiesarchivepage.css
@@ -390,13 +390,15 @@ body{
 .ctx-image1{
   position: absolute;
     z-index: 54;
-    width: 713px;
-    height: 639px;
-    top: 240px;
-    right: -55px;
+    width: 550px;
+    height: 420px;
+    top: 395px;
+    right: 46px;
     margin: 0 auto;
 }
-
+.image-manage{
+  position: relative;
+}
 
 .ctx-section  .feaured-product-pic .ctx-text{
   width: 75%;
@@ -2060,13 +2062,14 @@ padding-left: 2px;
 }
 .slider-business{
     background-blend-mode: normal, multiply;
-  background-image: linear-gradient(rgba(84, 88, 90, 0.7), rgba(84, 88, 90, 0.7)), linear-gradient(#9fa8ac, #9fa8ac), linear-gradient(to bottom, rgba(0, 0, 0, 0), #919ba1), url('../assets/emergingtrendsgerms.jpg');
+  background-image: linear-gradient(rgba(84, 88, 90, 0.7), rgba(13, 14, 14, 0.7)), linear-gradient(#9fa8ac, #9fa8ac), linear-gradient(to bottom, rgba(0, 0, 0, 0), #919ba1)
+  , url('../assets/emergingtrendsgerms.jpg');
     background-repeat: no-repeat;
     background-size: 100%;
 }
 .featured-customer-story{
     background-blend-mode: normal, multiply;
-  background-image: linear-gradient(rgba(84, 88, 90, 0.7), rgba(84, 88, 90, 0.7)), linear-gradient(#9fa8ac, #9fa8ac), linear-gradient(to bottom, rgba(0, 0, 0, 0), #919ba1),url('../assets/emergingtrendsgerms.jpg');
+  background-image: linear-gradient(rgba(84, 88, 90, 0.7), rgba(13, 14, 14, 0.7)), linear-gradient(#9fa8ac, #9fa8ac), linear-gradient(to bottom, rgba(0, 0, 0, 0), #919ba1), url("../assets/emergingtrendsgerms.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
 }  
