--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -39,8 +39,12 @@
   justify-content: flex-end;
   align-items: flex-end;
   font-family: AvenirNext;
-  padding-top: 58px; }
-
+  padding-top: 58px;
+}
+.main-area{
+  max-width: 1319px;
+  margin: 0 auto;
+}
 .row2 p {
   color: #EE0505;
   font-size: 29px;
@@ -90,10 +94,7 @@
 .menudiv {
   background-color: #fc0606;
   height: 65px;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center; }
+}
 
 .menudiv i {
   height: 39px;
@@ -123,10 +124,9 @@
   font-family: AvenirNext;
   border-bottom-right-radius: 9px;
   border-top-right-radius: 9px;
-  margin-left: -53px;
   cursor: pointer;
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   align-items: center;
   margin-top: 1px; }
 
